--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,8 @@
   <span>Ristorante Con Fusion</span>
 </mat-toolbar>
 
+<app-menu></app-menu>
+
 <!--<div style="text-align:center">
   <h1>
     Welcome to {{title}}!
